[project]
name = "psychotherapy-synthesis"
version = "0.1.0"
description = ""
authors = [
    {name = "entfane",email = "nik77kez@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
